--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 *{
   box-sizing: border-box;
 }
+
+:root{
+  font-family: "Alice", serif;
+  line-height: 150%;
+  color: #573a37;
+}
 body{
   background-image: url(./assets/bg.jpg);
   background-size: cover;
@@ -13,4 +19,17 @@ body{
   background-color: #f0e8c2;
   border-radius: 24px;
   margin: 48px auto;
+}
+
+h1{
+  line-height: 140%;
+  font-size: 40px;
+}
+
+h2{
+  font-size: 24px;
+}
+
+h1, h2{
+  color: #291b1a;
 }
