--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 *{
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root{
@@ -21,6 +23,18 @@ body{
   margin: 48px auto;
 }
 
+main{
+  padding: 24px;
+}
+
+section + section{
+  margin-top: 24px;
+}
+
+#about p + p{
+  margin-top: 12px;
+}
+
 h1{
   line-height: 140%;
   font-size: 40px;
@@ -28,8 +42,15 @@ h1{
 
 h2{
   font-size: 24px;
+
 }
 
 h1, h2{
   color: #291b1a;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul{
+  padding-left: 24px
 }
